# Apply-BMP-to-YUV

./: CMakeLists.txt
ElCMake/: CMakeLists.txt  ElCMake.cpp  ElCMake.h
ElCMake/src/bmpK3D/: bmpK3D.cpp  bmpK3D.h
ElCMake/src/yuvK3D/: yuvK3D.cpp  yuvK3D.h
